--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 TELEGRAM_BOT_TOKEN=7861422763:AAGw_iF2Wrme9YUFcfN-vG8MUrLjVWs43vo
+TELEGRAM_CHAT_ID=771061410
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
